# mylisp-rs

./: AGENTS.md  BENCHMARKS.md  BENCHMARK_BASELINE.md  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  FEATURES.md  JIT_IMPROVEMENT_SUMMARY.md  JIT_INTEGRATION_REPORT.md  JIT_PHASE1_REPORT.md  JIT_PHASE2_LAMBDA_REPORT.md  JIT_PHASE3_VM_CALL_REPORT.md  JIT_PHASE4_LOCAL_VARS_REPORT.md  MACRO.md  MACRO_V2.md  README.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  TCO.md  TODO.md  bootstrap.lisp  bootstrap_test.lisp  final_bootstrap.lisp  interpreter.lisp  run-benchmarks.sh  simple_bootstrap.lisp  simple_demo.lisp  test.lisp  test_all.lisp  test_bootstrap.lisp  test_closure.lisp  test_cond.lisp  test_cond_begin.lisp  test_ffi.lisp  test_higher_order.lisp  test_jit_benchmark.lisp  test_jit_benchmark_simple.lisp  test_jit_boolean.lisp  test_jit_comprehensive.lisp  test_jit_integration.lisp  (+17 more)
benches/: README.md  benchmark.rs  flamegraph.rs  quick_bench.rs
benches/data/: closure.lisp  fib.lisp  list_ops.lisp  macros.lisp  primes.lisp
examples/: demo_ffi.lisp  demo_real_net.lisp  ntp_server.lisp  ntp_server_real.lisp  test_math.lisp  test_net.lisp  test_time.lisp
src/: ast.rs  env.rs  env_tco.rs  eval.rs  eval_impl.rs  lexer.rs  lib.rs  main.rs  main.rs.patch  parser.rs
src/eval/: builtins.rs  error.rs  ffi.rs  macros.rs  mod.rs  special_forms.rs  tco.rs
src/jit/: bytecode.rs  compiler.rs  mod.rs  vm.rs
src/utils/: mod.rs  type_checker.rs  validator.rs
stdlib/: README.md  math.lisp  net.lisp  time.lisp
